--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+        <script src="gl-matrix-min.js"></script>
         <script src="Bin.bc.js"></script>
     </body>
 </html>
