Update JS example to work with release build

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,9 @@
     </head>
     <body>
         <script src="gl-matrix-min.js"></script>
+        <script>
+        window.require = false;
+        </script>
         <script src="Examples.bc.js"></script>
     </body>
 </html>
