Add window.require stub

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,11 @@
     </head>
     <body>
         <script src="gl-matrix-min.js"></script>
+        <script>
+            // Compiled Examples.bc.js does a check for require,
+            // but it's not needed during runtime.
+            window.require = false;
+        </script>
         <script src="Examples.bc.js"></script>
     </body>
 </html>
