Fix background color

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,6 +6,7 @@
         html, body {
             margin: 0px;
             padding: 0px;
+            background-color: #212733;
         }
         </style>
     </head>
