Initial playground build

--- a/playground/index.html
+++ b/playground/index.html
@@ -7,6 +7,12 @@
 </head>
 <body style="margin: 0px;">
 
+<script>
+window.addEventListener("message", (evt) => {
+    alert("message: " + evt.data);
+}, false);
+</script>
+
 <div style="display: flex; flex-direction: row; position: absolute; top: 0; left: 0; right: 0; bottom: 0;">
 <div id="code" style="flex: 2;overflow: hidden;"></div>
 <div id="example" style="flex: 3; background-color: red;">
