Move sources to src, add variables to build script

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" data-name="vs/editor/editor.main" href="node_modules/monaco-editor/min/vs/editor/editor.main.css">
 	<link rel="stylesheet" href="index.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 <body style="margin: 0px;">
 
@@ -37,13 +40,13 @@
 <div class="root">
 <div class="header">
     <div class="left">
-        test
+        <a href="#" onclick="window.history.back()"><i class="fas fa-chevron-left"></i></a>
     </div>
     <div class="center">
-        <span>Revery Playground</span>
+        <span class="title">Revery Playground</span>
     </div>
     <div class="right">
-        test
+        <a href="https://github.com/revery-ui/revery" onclick="window.history.back()"><i class="fab fa-github"></i></a>
     </div>
 </div>
 <div class="container">
@@ -53,7 +56,9 @@
     </div>
 </div>
 <div class="footer">
-    <div class="center">Made with :heart: by Outrun Labs and amazing collaborators.</div>
+    <div class="left"><span class="subtle">Revery JS + WebGL build v{#VERSION}<span></div>
+    <div class="center"><span class="subtle">Brought to you by <a href="https://www.outrunlabs.com">Outrun Labs</a> and our amazing <a href="https://github.com/revery-ui/revery/graphs/contributors">collaborators.</span></a></div>
+    <div class="right"><span class="subtle"><a href="https://github.com/revery-ui/revery/commit/{#COMMIT}">{#COMMIT}</a><span></div>
 </div>
 </div>
 
