Final styling tweaks

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -76,7 +76,10 @@
         readOnly: true,
 	});
 
-  window.__revery_editor_set = (t) => editor.setValue(t);
+window.__revery_editor_set = (t) => {
+    editor.setValue(t);
+    editor.revealLine(1);
+};
 </script>
 
 </body>
