--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -57,7 +57,7 @@
 </div>
 <div class="footer">
     <div class="left"><span class="subtle">Revery JS + WebGL build v{#VERSION}<span></div>
-    <div class="center"><span class="subtle">Brought to you by <a href="https://www.outrunlabs.com">Outrun Labs</a> and our amazing <a href="https://github.com/revery-ui/revery/graphs/contributors">collaborators.</span></a></div>
+    <div class="center"><span class="subtle">Brought to you by <a href="https://www.outrunlabs.com">Outrun Labs</a> and amazing <a href="https://github.com/revery-ui/revery/graphs/contributors">collaborators.</span></a></div>
     <div class="right"><span class="subtle"><a href="https://github.com/revery-ui/revery/commit/{#COMMIT}">{#COMMIT}</a><span></div>
 </div>
 </div>
