--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -51,13 +51,13 @@
 </div>
 <div class="container">
     <div id="code" style="flex: 2;overflow: hidden;"></div>
-    <div id="example" style="flex: 3; background-color: red;">
+    <div id="example" style="flex: 3;">
         <iframe src="host/index.html" style="border: 0; width: 100%; height: 100%"></iframe>
     </div>
 </div>
 <div class="footer">
     <div class="left"><span class="subtle">Revery JS + WebGL build v{#VERSION}<span></div>
-    <div class="center"><span class="subtle">Brought to you by <a href="https://www.outrunlabs.com">Outrun Labs</a> and amazing <a href="https://github.com/revery-ui/revery/graphs/contributors">collaborators.</span></a></div>
+    <div class="center"><span class="subtle"><!-- TODO: Credit example --></span></a></div>
     <div class="right"><span class="subtle"><a href="https://github.com/revery-ui/revery/commit/{#COMMIT}">{#COMMIT}</a><span></div>
 </div>
 </div>
