Don't copy all of node_modules; just monaco-editor

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-	<link rel="stylesheet" data-name="vs/editor/editor.main" href="node_modules/monaco-editor/min/vs/editor/editor.main.css">
+	<link rel="stylesheet" data-name="vs/editor/editor.main" href="monaco-editor/min/vs/editor/editor.main.css">
 	<link rel="stylesheet" href="index.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -63,10 +63,10 @@
 </div>
 
 
-<script>var require = { paths: { 'vs': 'node_modules/monaco-editor/min/vs' } };</script>
-<script src="node_modules/monaco-editor/min/vs/loader.js"></script>
-<script src="node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
-<script src="node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
+<script>var require = { paths: { 'vs': 'monaco-editor/min/vs' } };</script>
+<script src="monaco-editor/min/vs/loader.js"></script>
+<script src="monaco-editor/min/vs/editor/editor.main.nls.js"></script>
+<script src="monaco-editor/min/vs/editor/editor.main.js"></script>
 
 <script>
 	var editor = monaco.editor.create(document.getElementById('code'), {
