Minor tweaks for playground (#317)
* Fix 'npm start' command in playground

* Don't copy all of node_modules; just monaco-editor

* Revert buildsInSource change

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-	<link rel="stylesheet" data-name="vs/editor/editor.main" href="node_modules/monaco-editor/min/vs/editor/editor.main.css">
+	<link rel="stylesheet" data-name="vs/editor/editor.main" href="monaco-editor/min/vs/editor/editor.main.css">
 	<link rel="stylesheet" href="index.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -51,22 +51,22 @@
 </div>
 <div class="container">
     <div id="code" style="flex: 2;overflow: hidden;"></div>
-    <div id="example" style="flex: 3; background-color: red;">
+    <div id="example" style="flex: 3;">
         <iframe src="host/index.html" style="border: 0; width: 100%; height: 100%"></iframe>
     </div>
 </div>
 <div class="footer">
     <div class="left"><span class="subtle">Revery JS + WebGL build v{#VERSION}<span></div>
-    <div class="center"><span class="subtle">Brought to you by <a href="https://www.outrunlabs.com">Outrun Labs</a> and amazing <a href="https://github.com/revery-ui/revery/graphs/contributors">collaborators.</span></a></div>
+    <div class="center"><span class="subtle"><!-- TODO: Credit example --></span></a></div>
     <div class="right"><span class="subtle"><a href="https://github.com/revery-ui/revery/commit/{#COMMIT}">{#COMMIT}</a><span></div>
 </div>
 </div>
 
 
-<script>var require = { paths: { 'vs': 'node_modules/monaco-editor/min/vs' } };</script>
-<script src="node_modules/monaco-editor/min/vs/loader.js"></script>
-<script src="node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
-<script src="node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
+<script>var require = { paths: { 'vs': 'monaco-editor/min/vs' } };</script>
+<script src="monaco-editor/min/vs/loader.js"></script>
+<script src="monaco-editor/min/vs/editor/editor.main.nls.js"></script>
+<script src="monaco-editor/min/vs/editor/editor.main.js"></script>
 
 <script>
 	var editor = monaco.editor.create(document.getElementById('code'), {
