Fixed Playground: Live-editing code #319

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -73,7 +73,7 @@
 		value: window.__revery_latest_sources,
 		language: 'rust',
         theme: 'vs-dark',
-        readOnly: true,
+        readOnly: false,
 	});
 
 window.__revery_editor_set = (t) => {
