Get default button example rendering

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -34,7 +34,7 @@
       }
   }, false);
 
-  fetchLatestSources("Hello.re");
+  fetchLatestSources("Defaultbutton.re");
 </script>
 
 <div class="root">
