--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -43,7 +43,7 @@
         <a href="#" onclick="window.history.back()"><i class="fas fa-chevron-left"></i></a>
     </div>
     <div class="center">
-        <span class="title">Revery Playground</span>
+        <a href="https://www.outrunlabs.com/revery" alt="Revery"><img src="./dark-logo-transparent.png" title="Revery Logo" style="width: 96px;" /></a>
     </div>
     <div class="right">
         <a href="https://github.com/revery-ui/revery" onclick="window.history.back()"><i class="fab fa-github"></i></a>
