--- a/playground/src/playground.html
+++ b/playground/src/playground.html
@@ -50,6 +50,7 @@
 
         window.addEventListener("message", (msg) => {
             if (msg.data.type === "editor.update") {
+                console.log("Got code update!");
                 updateCode(msg.data.payload);
             }
         });
