--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -27,14 +27,6 @@
           });
   };
 
-  window.addEventListener("message", (evt) => {
-      let data = evt.data;
-      if (data && data.type == "example.switch") {
-          fetchLatestSources(data.payload);
-      }
-  }, false);
-
-  fetchLatestSources("BoxShadow.re");
 </script>
 
 <div class="root">
@@ -134,6 +126,54 @@ iframe.contentWindow.postMessage({ type: "editor.update", payload: allLines });
 editor.onDidChangeModelContent((e) => {
     debouncedUpdate();
 });
+
+  let infoFromError = (s) => {
+    let items = s.split(',');
+    let lineNumber = items[1];
+    let characters = items[2];
+
+    let lineSpace = lineNumber.lastIndexOf(' ');
+    let startLineNumber = parseInt(lineNumber.substring(lineSpace, lineNumber.length));
+    let endLineNumber = startLineNumber;
+
+    let characterSpace = characters.lastIndexOf(' ');
+    let characterHyphen = characters.lastIndexOf('-');
+    let characterColon = characters.lastIndexOf(':')
+
+    let startColumn = parseInt(characters.substring(characterSpace, characterHyphen));
+    let endColumn = parseInt(characters.substring(characterHyphen + 1, characterColon));
+      return { startLineNumber, startColumn, endLineNumber, endColumn };
+  };
+
+  let setErrors = (errors) => {
+    errors = errors.split("\n");
+      let markers = [];
+    for(let i = 0; i  < errors.length - 1; i += 2) {
+        let location = errors[i]; 
+        let message = errors[i + 1];
+
+        let info = infoFromError(location);
+
+        markers.push({
+           ...info,
+           message
+        })
+    };
+
+     monaco.editor.setModelMarkers(editor.getModel(), "revery", markers);
+  };
+
+  window.addEventListener("message", (evt) => {
+      let data = evt.data;
+      if (data && data.type == "example.switch") {
+          fetchLatestSources(data.payload);
+      } else if (data && data.type == "compile.errors") {
+          /* TODO: Parse errors and show in editor */
+          setErrors(data.errors);
+      }
+  }, false);
+
+  fetchLatestSources("BoxShadow.re");
 
 window.__revery_editor_set = (t) => {
     editor.setValue(t);
